--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/png" href="/assets/img/logo.png" />
     <link rel="stylesheet" href="/assets/css/styles.min.css" />
     <link href="/assets/css/custom/customstyle.css" rel=" stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <!--  Body Wrapper -->
@@ -170,8 +172,8 @@
         </div>
     </div>
     
-    <script src="/assets/js/notify.js"></script>
-    <script src="/assets/js/notify.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.all.min.js"></script>
     <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/sidebarmenu.js"></script>
