--- a/views/public/cart.ejs
+++ b/views/public/cart.ejs
@@ -1,24 +1,21 @@
 <!-- include header -->
 <%- include('./includes/header') %>
 
+    <% if(!cart.length > 0){ %>
     <section style="background-color: #eee;">
         <div class="container profile-section">
             <div class="row">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3>Cart</h3>
-                            </div>
-                            <div class="card-body cart">
-                                <div class="col-sm-12 empty-cart-cls text-center">
-                                    <img src="./assets/img/cart.png" width="130" height="130"
-                                        class="img-fluid mb-4 mr-3">
-                                    <h3><strong>Your Cart is Empty</strong></h3>
-                                    <h4>Add Foods</h4>
-                                    <a href="#" class="btn btn-primary cart-btn-transform m-3" data-abc="true">continue
-                                        shopping</a>
-                                </div>
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Cart</h3>
+                        </div>
+                        <div class="card-body cart">
+                            <div class="col-sm-12 empty-cart-cls text-center">
+                                <img src="./assets/img/cart.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+                                <h3><strong>Your Cart is Empty</strong></h3>
+                                <h4>Add Foods</h4>
+                                <a href="/" class="btn btn-primary cart-btn-transform m-3" data-abc="true">Continue Shopping</a>
                             </div>
                         </div>
                     </div>
@@ -26,25 +23,24 @@
             </div>
         </div>
     </section>
+    <% }else{ %>
 
     <section class="h-100">
         <div class="container py-5">
             <div class="row d-flex justify-content-center my-4">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <div class="card mb-4">
                         <div class="card-header py-3">
-                            <h3 class="mb-0">Cart - 2 items</h3>
+                            
                         </div>
                         <div class="card-body">
-                            <hr class="my-4" />
                             <!-- Single item -->
-                            <div class="row">
+                            <% cart.forEach(element => { %>
+                            <div class="row align-items-center cart-items-list">
                                 <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
                                     <!-- Image -->
-                                    <div class="bg-image hover-overlay hover-zoom ripple rounded"
-                                        data-mdb-ripple-color="light">
-                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Vertical/13a.webp"
-                                            class="w-100" />
+                                    <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
+                                        <img src="food/<%= element.carted.image !== "" ? element.carted.image : "" %>" class="w-50" />
                                         <a href="#!">
                                             <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
                                         </a>
@@ -52,79 +48,46 @@
                                     <!-- Image -->
                                 </div>
 
-                                <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                                <div class="col-lg-6 col-md-6 mb-4 mb-lg-0">
                                     <!-- Data -->
-                                    <h5><strong>Food Name</strong></h5>
-                                    <p>veg / no-veg</p>
-                                    <button type="button" class="btn btn-danger delete-button"><i class="bi bi-trash3-fill"></i></button>
-                                </div>
-
-                                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                                    <!-- Quantity -->
-                                    <div class="d-flex mb-4" style="max-width: 300px">
-                                        <button class="btn btn-primary me-2 cart-btn" onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                    <h5><strong><%= element.carted.foodName %></strong></h5>
+                                    <p><%= element.carted.foodType === 1 ? "Veg" : "Non-Veg" %></p>
+                                    <h5 class="text-start text-md-center float-end">
+                                        <strong class=""> ₹ <span class="total-price text-danger"><%= element.total %></span></strong>
+                                    </h5>
+                                    <div class="d-flex mb-4" style="max-width: 400px">
+                                        <button class="btn btn-primary me-2 cart-btn" onclick="decrement(this)">
                                             <i class="bi bi-dash-lg"></i>
                                         </button>
-
                                         <div class="form-outline">
-                                            <input id="form1" min="0" name="quantity" value="1" type="number"
-                                                class="form-control" />
-                                            <label class="form-label" for="form1">Quantity</label>
+                                            <input id="<%= element.carted._id %>" min="1" name="quantity" value="<%= element.quantity %>" type="number" class="form-control" style="width: 75px;" readonly/>
+                                            <input name="foodId" value="<%= element.carted._id %>" type="hidden" class="form-control"/>
+                                            <input name="foodPrice" value="<%= element.carted.discPrice %>" type="hidden" class="form-control"/>
                                         </div>
-
-                                        <button class="btn btn-primary ms-2 cart-btn" onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                        <button class="btn btn-primary ms-2 cart-btn" onclick="increment(this)">
                                             <i class="bi bi-plus"></i>
                                         </button>
                                     </div>
-                                    <!-- Quantity -->
+                                    <h6 class="text-start text-md-center float-start">
+                                        <strong class="text-secondary">Price : ₹ <span class="org-price"><%= element.carted.discPrice %></span></strong>
+                                    </h6>
+                                    
+                                </div>
 
-                                    <!-- Price -->
-                                    <h5 class="text-start text-md-center">
-                                        <strong class="text-danger">$17.99</strong>
-                                    </h5>
-                                    <!-- Price -->
+                                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                                    <button data-item="<%= element.carted._id %>" type="button" class="cart-delete-btn btn btn-danger float-end"><i class="bi bi-trash3-fill"></i></button>
                                 </div>
                             </div>
-                            <!-- Single item -->
+                            <hr>
+                            <% }) %>
                         </div>
                     </div>
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <p><strong>Expected shipping delivery</strong></p>
-                            <p class="mb-0">12.10.2020 - 14.10.2020</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-header py-3">
-                            <h3 class="mb-0">Summary</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group list-group-flush">
-                                <li
-                                    class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                                    Products
-                                    <span>$53.98</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                    Shipping
-                                    <span>Gratis</span>
-                                </li>
-                                <li
-                                    class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                                    <div>
-                                        <strong>Total amount</strong>
-                                        <strong>
-                                            <p class="mb-0">(including VAT)</p>
-                                        </strong>
-                                    </div>
-                                    <h5><strong class="text-danger">$53.98</strong></h5>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">
-                                Go to checkout
-                            </button>
+                    <div class="card mb-4 ">
+                        <div class="w-100">
+                            <div class="w-25 float-end">
+                                <button id="checkOutBtn"  onclick="checkOut('<%= JSON.stringify(cart) %>')" class="m-3 float-end btn btn-success w-50">Checkout</button>
+                            </div>
+                            <h5 class="float-end m-3">Total : ₹ <%= cart.subTotal %></h5>
                         </div>
                     </div>
                 </div>
@@ -132,5 +95,8 @@
         </div>
     </section>
 
-    <!-- include footer -->
-    <%- include('./includes/footer') %>
+    <% } %>
+    <script src="./assets/js/cartActions.js"></script>
+
+<!-- include footer -->
+<%- include('./includes/footer') %>
