--- a/views/public/includes/profileLeft.ejs
+++ b/views/public/includes/profileLeft.ejs
@@ -3,7 +3,7 @@
         <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
                 alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3">John Smith</h5>
+            <h5 class="my-3"><%= userName ? userName : "user" %></h5>
         </div>
     </div>
     <div class="card mb-4 mb-lg-0">
