--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -102,7 +102,7 @@
 							%>
 								<div class="col-lg-4 border-start custom-border bg-light">
 									<div class="post-entry-1">
-										<a href="/foodDetail?id=<%= item._id %>">
+										<a href="/foodDetail/<%= item.slug %>">
 											<% if(item.image){ %>
 												<img src="/food/<%= item.image %>" alt="food image" class="img-fluid">
 											<% }else{ %>
@@ -110,7 +110,7 @@
 											<% } %>
 										</a>
 										<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
-										<h2><a href="/foodDetail?id=<%= item._id %>"><%= item.foodName %></a></h2>
+										<h2><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
 										<a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
 										<h2 class="pt-2"><a href="/foodDetail/" class="text-success"><b>₹ <%= item.discPrice %></b></a>&nbsp;&nbsp;<small class="text-secondary"><del>₹ <%= item.orgPrice %></del></small></h2>
 									</div>
