--- a/views/public/addressBook.ejs
+++ b/views/public/addressBook.ejs
@@ -18,26 +18,29 @@
                         </div>
                         <div class="row py-3 text-dark">
                             <div class="py-3 col-sm-12">
-                                <% address.addresses.forEach(element => { %>
-                                    <div class="rounded p-3 mb-3" style="background-color: #e4e4da;">
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <div>
-                                                <p class="mb-0"><strong><%= element.fullName %></strong></p>
-                                                <p class="mb-0"><%= element.addressLine %>, <%= element.city %>, <%= element.state %>, <%= element.pinCode %></p>
-                                                <p class="mb-0">Mobile: <%= element.mobileNumber %></p>
-                                                <p class="mb-0">Address Type: <%= element.addressType %></p>
-                                            </div>
-                                            <div>
-                                                <a href="/edit-address/<%= element._id %>"><button class="btn btn-primary">Edit</button></a>
-                                                <button data-address="<%= JSON.stringify(element) %>" class="btn btn-danger delete-address">Delete</button>
+                                <% if (!address.addresses.length > 0) { %>
+                                 <p>No address to display</p>
+                                <% }else{ %>
+                                    <% address.addresses.forEach(element => { %>
+                                        <div class="rounded p-3 mb-3" style="background-color: #e4e4da;">
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div>
+                                                    <p class="mb-0"><strong><%= element.fullName %></strong></p>
+                                                    <p class="mb-0"><%= element.addressLine %>, <%= element.city %>, <%= element.state %>, <%= element.pinCode %></p>
+                                                    <p class="mb-0">Mobile: <%= element.mobileNumber %></p>
+                                                    <p class="mb-0">Address Type: <%= element.addressType %></p>
+                                                </div>
+                                                <div>
+                                                    <button class="btn btn-primary" onclick="setDefault('<%= element._id %>')">Set Default</button>
+                                                    <a href="/edit-address/<%= element._id %>"><button class="btn btn-primary">Edit</button></a>
+                                                    <button data-address="<%= JSON.stringify(element) %>" class="btn btn-danger delete-address">Delete</button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                <% }) %>
+                                    <% }) %>
+                                <% } %>
                             </div> 
                         </div>
-                        
-                        
                         <div class="row py-1">
                             <div class="col-sm-12">
                                 <!-- Button trigger modal -->
