--- a/views/public/checkOut.ejs
+++ b/views/public/checkOut.ejs
@@ -1,109 +1,221 @@
 
 <%- include("includes/header") %>
 
-    <div class="container padd-top">
+  <div class="container padd-top">
+      <form action="/authCheckout" method="POST">
         <div class="row">
-            <div class="col-md-4 order-md-2 mb-4">
-              <h4 class="d-flex justify-content-between align-items-center mb-3">
-                <span class="text-muted">Order Details</span>
-                <span class="badge badge-secondary badge-pill">3</span>
-              </h4>
-              <ul class="list-group mb-3">
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                  <div>
-                    <h6 class="my-0">Original Price</h6>
-                  </div>
-                  <span class="text-muted">$12</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                  <div>
-                    <h6 class="my-0">Offer Price</h6>
-                  </div>
-                  <span class="text-muted">$8</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                  <div>
-                    <h6 class="my-0">Delivery fee</h6>
-                  </div>
-                  <span class="text-muted">$5</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between bg-light">
-                  <div class="text-success">
-                    <h6 class="my-0">Coupon discount</h6>
-                    <small>EXAMPLECODE</small>
-                  </div>
-                  <span class="text-success">-$5</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between">
-                  <span>Total Amount</span>
-                  <strong>$20</strong>
-                </li>
-              </ul>
-        
-              <form class="card p-2">
-                <div class="input-group">
-                  <input type="text" class="form-control mx-1" placeholder="Coupon code">
-                  <div class="input-group-append">
-                    <button type="submit" class="btn btn-warning mx-1">View coupons</button>
-                  </div>
-                </div>
-              </form>
-              <button id="checkout-btn" class="btn btn-primary btn-lg btn-block w-100" type="button">Continue to checkout</button>
+        <div class="col-md-8">
+          <h4 class="mb-3">Delivery Address*</h4>
+          <div class="form-floating">
+            <textarea class="form-control" id="floatingAddress" name="address" style="height: 150px" placeholder="Address" readonly><%= `${defAddress.fullName}, \n${defAddress.addressLine},  ${defAddress.pinCode},  ${defAddress.city},  ${defAddress.state}, \n${defAddress.mobileNumber}, \n${defAddress.addressType}  ` %></textarea>
+            <label for="floatingAddress">Address</label>
+          </div>
+          <br>
+          <div class="row">
+            <div class="col-md-12 mb-4">
+              <button type="button" class="btn btn-dark float-end" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Change Address
+              </button>
+              <button type="button" class="btn btn-warning float-end" style="margin-right: 15px;" data-bs-toggle="modal" data-bs-target="#addressModal">
+                Add new address
+              </button>
             </div>
-            <div class="col-md-8 order-md-1">
-              <h4 class="mb-3">Delivery Address*</h4>
-              <form class="needs-validation" novalidate>
-                <div class="row">
-                    <div class="col-md-12 mb-3">
-                        <div class="form-floating">
-                            <textarea class="form-control" id="floatingAddress" style="height: 200px" placeholder="Address" readonly></textarea>
-                            <label for="floatingAddress">Address</label>
-                        </div>
-                    </div>
+          </div>
+          
+          <div class="row">
+            <h4 class="mb-3">Current Orders</h4>
+            <input type="hidden" name="cartItems" value="<%= JSON.stringify(cartItems) %>" readonly>
+            <% cartItems.forEach(element => { %>
+            <div class="col-md-6 mb-4">
+              <div class="bg-white p-3 d-flex align-items-center">
+                <img src="food/<%= element.carted.image ? element.carted.image : "" %>" alt="<%= element.carted.foodName %>" class="img-fluid mr-3" style="max-width: 100px;">
+                <div class="mx-3">
+                  <p class="mb-2"><%= element.carted.foodName %>.</p>
+                  <span><b>₹<%= element.carted.orgPrice %></b></span>
+                  <span class="mx-4"><b><%= element.quantity %></b></span>
+                  <span class="mx-4 text-danger"><b>₹<%= element.total %></b></span>
                 </div>
-                <button class="btn btn-primary float-end">Change address</button>
-                <br>
-                <br>
-                <hr class="mb-4">
-                <h4 class="mb-3">Current Orders</h4>
-                <div class="row">
-                    <div class="col-xl-3">
-                        <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                            </div>
-                        </div>
+              </div>
+            </div>
+            <% }) %> 
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <h4 class="mb-3">Order Details</h4>
+          <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed py-4">
+              <div>
+                <h6 class="my-0">Original Price</h6>
+              </div>
+              <span class="text-muted">₹ <%= locals.subTotal[0].subTotal %></span>
+              <input type="hidden" name="price" value="<%= locals.subTotal[0].subTotal %>" readonly>
+            </li>
+            <!-- <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Offer Price</h6>
+              </div>
+              <span class="text-muted">$8</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Delivery fee</h6>
+              </div>
+              <span class="text-muted">$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between bg-light">
+              <div class="text-success">
+                <h6 class="my-0">Coupon discount</h6>
+                <small>EXAMPLECODE</small>
+              </div>
+              <span class="text-success">-$5</span>
+            </li> -->
+            <li class="list-group-item d-flex justify-content-between py-4">
+              <span>Total Amount</span>
+              <strong class="text-danger">₹ <%= locals.subTotal[0].subTotal %></strong>
+              <input type="hidden" name="totalPrice" value="<%= locals.subTotal[0].subTotal %>" readonly>
+            </li>
+          </ul>
+          <h4 class="py-2">Payment Options</h4>
+          <ul class="list-group mb-3">
+            <li class="list-group-item py-4">
+              <input class="form-check-input border-dark" type="radio" name="paymentOption" id="cashOnDelivery" value="cod" checked>
+              <label class="form-check-label" for="cashOnDelivery">Cash on Delivery</label>
+            </li>
+            <!-- <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Offer Price</h6>
+              </div>
+              <span class="text-muted">$8</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <div>
+                <h6 class="my-0">Delivery fee</h6>
+              </div>
+              <span class="text-muted">$5</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between bg-light">
+              <div class="text-success">
+                <h6 class="my-0">Coupon discount</h6>
+                <small>EXAMPLECODE</small>
+              </div>
+              <span class="text-success">-$5</span>
+            </li> -->
+            <li class="list-group-item py-4">
+              <input class="form-check-input border-dark" type="radio" name="paymentOption" id="onlinePayment" value="onlinePay">
+                <label class="form-check-label " for="onlinePayment">Online Payment</label>
+            </li>
+          </ul>
+          <button type="submit" id="checkout-btn" class="btn btn-primary btn-lg btn-block w-100" type="button">Place Order</button>
+        </div>
+      </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Select Address</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <!-- Radio buttons for addresses -->
+                <% user.addresses.forEach(element => { %>
+                  <div class="form-check p-3">
+                    <input class="form-check-input border-dark" type="radio" name="addressRadio" id="address1" value="address1" onclick="setDefault('<%= element._id %>')">
+                    <label class="form-check-label" for="address1">
+                      <div>
+                        <p class="mb-0"><strong><%= element.fullName %></strong></p>
+                        <p class="mb-0"><%= element.addressLine %>, <%= element.city %>, <%= element.state %>, <%= element.pinCode %></p>
+                        <p class="mb-0">Mobile: <%= element.mobileNumber %></p>
+                        <p class="mb-0">Address Type: <%= element.addressType %></p>
                     </div>
-                </div>
-                <p>no orders</p>
-                <hr class="mb-4">
-              </form>
+                    </label>
+                  </div>
+                <% }) %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="addressModal" tabindex="-1" aria-labelledby="addressModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-warning text-dark">
+            <h5 class="modal-title" id="addressModalLabel">Add Address</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addressBook" onsubmit="return validateForm()">
+                    <div class="mb-3">
+                        <label for="fullName" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter Full Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="mobileNumber" class="form-label">Mobile Number</label>
+                        <input type="tel" class="form-control" id="mobileNumber" name="mobileNumber" placeholder="Enter Mobile Number" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="pinCode" class="form-label">Pin Code</label>
+                        <input type="text" class="form-control" id="pinCode" name="pinCode" placeholder="Enter Pin Code" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="addressLine1" class="form-label">Address Line</label>
+                        <input type="text" class="form-control" id="addressLine" name="addressLine" placeholder="Enter Address Line" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="city" class="form-label">City / Town / District</label>
+                        <input type="text" class="form-control" id="city" name="city" placeholder="Enter City / Town / District" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="state" class="form-label">State</label>
+                        <input type="text" class="form-control" id="state" name="state" placeholder="Enter State" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="addressType" class="form-label">Address Type</label>
+                        <select class="form-select" id="addressType" name="addressType">
+                          <option value="Home">Home</option>
+                          <option value="Office">Office</option>
+                          <option value="Other">Other</option>
+                        </select>
+                    </div>
+                    <br>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-success">Add Address</button>     
+                </form>
             </div>
         </div>
     </div>
+  </div>
 
 
 
-    <script>
-        document.getElementById("checkout-btn").addEventListener("click",async ()=>{
-            const data = {name : "sanjay"}
-            const response = await fetch("/authCheckout", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify(data),
-                });
+  <script>
+      async function checkOut(cartItems, defAddressId){
+        // console.log(JSON.stringify(cartItems), defAddressId)
+        const response = await fetch("/authCheckout", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({cartItems, defAddressId}),
+            });
 
-                const result = await response.json();
-                if(result.status === "success"){
-                    window.location = "http://localhost:3000/payment"
-                }
-        })
-    </script>
+            const result = await response.json();
+            if(result.status === "success"){
+                window.location = "http://localhost:3000/payment"
+            } 
+      }
+  </script>
 
-
+  <script src="./assets/js/addressBook.js"></script>
 
 
 <%- include("includes/footer") %>
